--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "dependencies": {
     "nunjucks": "^1.3.3",
-    "express": "^4.12.3"
+    "express": "^4.12.3",
+    "socket.io": "^1.3.5",
   },
   "devDependencies": {},
   "scripts": {
