--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "nunjucks": "^1.3.3",
     "express": "^4.12.3",
     "socket.io": "^1.3.5",
+    "zmq": "2.11.0"
   },
   "devDependencies": {},
   "scripts": {
